# AdventOfCode

./: .gitignore  .gitmodules  README.md  prepare-day.sh
2022/: .gitignore  Cargo.toml
2022/day/01/: Cargo.toml  main.rs
2022/day/01/src/: main.rs
2022/day/02/: Cargo.toml  main.rs
2022/day/02/src/: main.rs
2022/day/03/: Cargo.toml  main.rs
2022/day/03/src/: main.rs
2022/day/04/: Cargo.toml  main.rs
2022/day/04/src/: main.rs
2022/day/05/: Cargo.toml  main.rs
2022/day/05/src/: main.rs
2022/day/06/: Cargo.toml  main.rs
2022/day/06/src/: main.rs
2022/day/07/: Cargo.toml  main.rs
2022/day/07/src/: main.rs
2022/day/08/: Cargo.toml  main.rs
2022/day/08/src/: main.rs
2022/day/09/: Cargo.toml  main.rs
2022/day/09/src/: main.rs
2022/day/1/src/: main.rs
2022/day/10/: Cargo.toml  main.rs
2022/day/10/src/: main.rs
2022/day/11/: Cargo.toml  main.rs
2022/day/12/: Cargo.toml  main.rs
2022/day/13/: Cargo.toml  main.rs
2022/day/14/: Cargo.toml  main.rs
2022/day/15/: Cargo.toml  main.rs
2022/day/16/: Cargo.toml  main.rs
2022/day/17/: Cargo.toml  log  main.rs
2022/day/18/: Cargo.toml  main.rs
2022/day/19/: Cargo.toml  main.rs
2022/day/20/: Cargo.toml  main.rs
templates/: main.rs
