[package]
name = "aoc-2022-16"
version = "0.1.0"
authors = ["Jalil David Salamé Messina <jalil.salame@tum.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc-2022-16"
path = "main.rs"

[dependencies]
nom.workspace = true
num.workspace = true
thiserror.workspace = true
itertools.workspace = true
color-eyre.workspace = true
pretty_assertions.workspace = true
petgraph = "0.6.2"
